# embassy-net-rp-self-debug

./: .gitignore  Cargo.toml  Makefile  SETUP.md  check-flash.sh  embassy-boot.patch  gen_yaml.sh  linker.map  memory.x
.cargo/: config.toml
examples/: basic.rs
src/: boot_success.rs  dap.rs  dap_leds.rs  flash_algo.rs  flash_new.rs  flash_standalone.rs  flash_standalone.rs.notes  flash_wrangler.rs  jtag.rs  lib.rs  main.rs  spinlock.rs  swd.rs  swj.rs  swo.rs
src/dap/: README.md  dap.rs  mod.rs  swd.rs  swj.rs  swo.rs  usb.rs
src/dap/dap/: command.rs  state.rs
src/debug/: dap.rs  dhcsr.rs  mod.rs  socket.rs  status.rs
src/flash/: algo.rs  algorithm.rs  guard.rs  ipc.rs  mod.rs  monitor.rs  spinlock.rs  thunk.rs
src/network/: README.md  mod.rs
