[package]
name = "embassy-net-rp-self-debug"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2

[features]
default = ["defmt", "usb-hs", "flash-size-2048k"]
defmt = []
usb-hs = []
flash-dry-run = []
flash-size-2048k = []

[dependencies]
cyw43-pio = { version = "0.2.0", features = ["defmt", "overclock"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
    "dhcpv4-hostname",
] }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
pio = "0.2.1"
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
cyw43 = { version = "0.2.0", features = ["defmt"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
num_enum = { version = "0.7.2", default-features = false }
bitflags = "2.6.0"
replace_with = { version = "0.1.7", default-features = false }
embassy-boot-rp = { version = "0.3.0", features = ["defmt"] }
embassy-embedded-hal = "0.2.0"
dap-rs = "0.2.0"
embedded-hal = "1.0.0"
