[package]
name = "embassy-net-rp-self-debug"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2

[dependencies]
defmt = "0.3.8"

embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
    "dhcpv4-hostname",
] }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

portable-atomic = { version = "1.5", features = ["critical-section"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embassy-boot = { version = "0.3.0", features = ["defmt"] }
embassy-boot-rp = { version = "0.3.0", features = ["defmt"] }
embassy-embedded-hal = "0.2.0"
dap-rs = "0.2.0"
embedded-hal = "1.0.0"
static_cell = "2.1.0"

[dev-dependencies]
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
cyw43 = { version = "0.2.0", features = ["defmt"] }
cyw43-pio = { version = "0.2.0", features = ["defmt", "overclock"] }
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
